added things/user relationship, jquery auth, and paperclip integration

--- a/app/views/things/_form.html.erb
+++ b/app/views/things/_form.html.erb
@@ -33,11 +33,7 @@
     <%= f.label :borrow %><br />
     <%= f.check_box :borrow %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit" %>
   </div>
 <% end %>
