--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,12 +10,12 @@
   <%= @user.email %>
 </p>
 
-<% if @user.things.any? %>
+<%= link_to "Upload stuff!", newthing_path, :class => "signup_button round" %>
+
+<% unless @user.things.empty? %>
     <table class="things" summary="User things">
       <%= render @things %>
     </table>
-    <%= will_paginate @things %>
-  <% end %>
+<% end %>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user) %>
