--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 			<li><%= link_to "Contact", contact_path %></li>
 			<% if signed_in? %>
 			<li><%= link_to "Sign out", signout_path %></li>
-			<li><%= link_to "homebase", current_user %></li>
+			<li><%= link_to "Your stuff", current_user %></li>
 			<% end %>
 			<% if !signed_in? %>
 			<li><%= link_to "Sign in", signin_path %></li>
