--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title><%= title %></title>
+  <%= javascript_include_tag :defaults, 'jquery', "rails.validations" %>
   <%= csrf_meta_tag %>
   <%= render 'layouts/stylesheets' %>
+  
 </head>
 <body>
 	<div class="container">
