--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,14 @@
 <h1>Sign up for this magical service</h1>
 
-<%= form_for(@user) do |f|%>
+<%= form_for @user, :validate => true do |f|%>
 	<%= render 'shared/error_messages'%>
-	<div class="field">
-		<%= f.label :name %>
+	<p>	
+		<%= f.label :name %><br />
 		<%= f.text_field :name %>
-	</div>
+	</p>
 
 	<div class="field">
-		<%= f.label :email %>
+		<%= f.label :email %><br />
 		<%= f.text_field :email %>
 	</div>
 	
