--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= title %></title>
-  <%= javascript_include_tag :defaults, 'jquery', "rails.validations" %>
+  <%= javascript_include_tag :defaults, 'jquery','jquery.min','rails.validations' %>
   <%= csrf_meta_tag %>
   <%= render 'layouts/stylesheets' %>
   
@@ -16,5 +16,7 @@
 		<%= render 'layouts/footer' %>
 		<%= debug(params) if Rails.env.development? %>
 	</div>
+
+	
 </body>
 </html>
