--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Sign up for this magical service</h1>
 
 <%= form_for @user, :validate => true do |f|%>
-	<%= render 'shared/error_messages'%>
+	<%= render 'shared/error_messages', :object => f.object%>
 	<p>	
 		<%= f.label :name %><br />
 		<%= f.text_field :name %>
