--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,12 +10,16 @@
   <%= @user.email %>
 </p>
 
+<% user = User.find_by_id(@user.id)%>
+<% if current_user?(user)%>
+<%= link_to 'Edit', edit_user_path(@user) %>
+<% end %>
+
 <%= link_to "Upload stuff!", newthing_path, :class => "signup_button round" %>
+<%= link_to " Join groups!", groups_path, :class => "signup_button round" %>
 
 <% unless @user.things.empty? %>
     <table class="things" summary="User things">
       <%= render @things %>
     </table>
 <% end %>
-
-<%= link_to 'Edit', edit_user_path(@user) %>
